Create get all posts endpoint
