# docs/swagger.json
@@ -34,7 +34,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handlers.createArticleResponseError"
+                            "$ref": "#/definitions/handlers.responseError"
                         }
                     }
                 }
@@ -72,7 +72,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handlers.createArticleResponseError"
+                            "$ref": "#/definitions/handlers.responseError"
                         }
                     }
                 }
@@ -86,7 +86,7 @@
                 "content": {
                     "type": "string"
                 },
-                "createdAt": {
+                "created_at": {
                     "type": "string"
                 },
                 "id": {
@@ -95,7 +95,7 @@
                 "title": {
                     "type": "string"
                 },
-                "updatedAt": {
+                "updated_at": {
                     "type": "string"
                 }
             }
@@ -131,7 +131,7 @@
                 }
             }
         },
-        "handlers.createArticleResponseError": {
+        "handlers.responseError": {
             "type": "object",
             "properties": {
                 "message": {
