# internal/handlers/articles.go
@@ -24,17 +24,17 @@ type createArticleResponseBody struct {
 	UpdatedAt time.Time `json:"updated_at"`
 }
 
-type createArticleResponseError struct {
+type responseError struct {
 	Message string `json:"message"`
 	
 }
 
 type article struct {
-	ID        string
-	Title     string
-	Content   string
-	CreatedAt time.Time
-	UpdatedAt time.Time
+	ID        string `json:"id"`
+	Title     string `json:"title"`
+	Content   string `json:"content"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
 }
 
 
@@ -46,7 +46,7 @@ type article struct {
 // @Produce json
 // @Param article body createArticleRequestBody true "Article data"
 // @Success 201 {object} createArticleResponseBody "Article created"
-// @Failure 500 {object} createArticleResponseError "Internal Server Error"
+// @Failure 500 {object} responseError "Internal Server Error"
 // @Router /articles/ [post]
 func (cfg *ApiCfg) CreateArticle(w http.ResponseWriter, r *http.Request) {
 	requestBody := createArticleRequestBody{}
@@ -56,7 +56,7 @@ func (cfg *ApiCfg) CreateArticle(w http.ResponseWriter, r *http.Request) {
 	err := decoder.Decode(&requestBody)
 	if err != nil {
 		log.Printf("an error occured while decoding the request: %v", err.Error())
-		errorResponse := createArticleResponseError{
+		errorResponse := responseError{
 			Message: "an error occured while creating the post",
 		}
 		dat, err := json.Marshal(errorResponse)
@@ -75,7 +75,7 @@ func (cfg *ApiCfg) CreateArticle(w http.ResponseWriter, r *http.Request) {
 	articleData, err := cfg.db.CreateArticle(r.Context(), createArticleParams)
 	if err != nil {
 		log.Printf("an error occured while creating the post: %v", err.Error())
-		errorResponse := createArticleResponseError{
+		errorResponse := responseError{
 			Message: "an error occured while creating the post",
 		}
 		dat, err := json.Marshal(errorResponse)
@@ -99,7 +99,7 @@ func (cfg *ApiCfg) CreateArticle(w http.ResponseWriter, r *http.Request) {
 	dat, err := json.Marshal(responseBody)
 	if err != nil {
 		log.Printf("an error occured while marshalling the post: %v", err.Error())
-		errorResponse := createArticleResponseError{
+		errorResponse := responseError{
 			Message: "an error occured while creating the post",
 		}
 		dat, err := json.Marshal(errorResponse)
@@ -126,8 +126,45 @@ func (cfg *ApiCfg) CreateArticle(w http.ResponseWriter, r *http.Request) {
 // @Accept json
 // @Produce json
 // @Success 200 {array} article  "All articles"
-// @Failure 500 {object} createArticleResponseError "Internal Server Error"
+// @Failure 500 {object} responseError "Internal Server Error"
 // @Router /articles/ [get]
 func (cfg *ApiCfg) GetArticles(w http.ResponseWriter, r *http.Request){
+	articles := make([]article,0)
+	articlesData , err := cfg.db.GetArticles(r.Context())
+	if err != nil{
+		log.Printf("an error occured while fetching all articles: %v", err.Error())
+		errorResponse := responseError{
+			Message: "an error occured while fetching all articles",
+		}
+		errorData, _ := json.Marshal(errorResponse)
+		utils.RespondWithJson(w,errorData,http.StatusInternalServerError)
+		return
+	}
+	
+	for _ , articleData := range articlesData{
+	
+		articles = append(articles, article{
+			ID: articleData.ID.String(),
+			Title: articleData.Title,
+			Content: articleData.Content,
+			CreatedAt: articleData.CreatedAt.Time,
+			UpdatedAt: articleData.UpdatedAt.Time,
+		})
+
+	}
+
+	dat, err := json.Marshal(articles)
+	if err != nil{
+		log.Printf("an error occured while marshalling all articles: %v", err.Error())
+		errorResponse := responseError{
+			Message: "an error occured while fetching all articles",
+		}
+		errorData, _ := json.Marshal(errorResponse)
+		utils.RespondWithJson(w,errorData,http.StatusInternalServerError)
+		return
+	}
+
+	utils.RespondWithJson(w,dat,http.StatusOK)
+
 
 }
